--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0-beta.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.5"
   },
   "eslintConfig": {
     "root": true,
