Revert "cssをlint対象に追加"
This reverts commit dd4e04cf6f9be1cf0136854dacfcb16c69371585.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{css,ts,vue}": "yarn lint:fix"
+    "*.{ts,vue}": "yarn lint:fix"
   },
   "dependencies": {
     "core-js": "^3.6.5",
