--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
-    "@storybook/vue": "^6.1.20",
+    "@storybook/addon-actions": "^6.2.0-beta.4",
+    "@storybook/addon-essentials": "^6.2.0-beta.4",
+    "@storybook/addon-links": "^6.2.0-beta.4",
+    "@storybook/vue3": "^6.2.0-alpha.20",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@vue/cli-plugin-babel": "~4.5.0",
