--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint-plugin-vue": "^7.6.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
