--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.6",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -41,8 +41,7 @@
     "eslint-plugin-vue": "^7.6.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.5",
-    "vue-template-compiler": "^2.6.12"
+    "typescript": "^4.1.5"
   },
   "eslintConfig": {
     "root": true,
