--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@storybook/vue3": "^6.2.0-alpha.20",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-service": "^5.0.0-alpha.5",
     "@vue/compiler-sfc": "^3.0.6",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
@@ -43,8 +43,7 @@
     "eslint-plugin-vue": "^7.6.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.5",
-    "vue-loader": "^16.1.2"
+    "typescript": "^4.1.5"
   },
   "eslintConfig": {
     "root": true,
