--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "chromatic": "git+https://github.com/nisshii0313/chromatic-cli.git#master",
+    "chromatic": "^5.7.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
