--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
-    "@storybook/addon-actions": "^6.2.0-beta.4",
-    "@storybook/addon-essentials": "^6.2.0-beta.4",
-    "@storybook/addon-links": "^6.2.0-beta.4",
-    "@storybook/vue3": "^6.2.0-alpha.20",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/vue3": "^6.3.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@vitejs/plugin-vue": "^1.1.5",
@@ -44,8 +44,9 @@
     "eslint-plugin-vue": "^7.6.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "storybook-builder-vite": "^0.0.12",
     "typescript": "^4.1.5",
-    "vite": "^2.0.4"
+    "vite": "^2.5.1"
   },
   "eslintConfig": {
     "root": true,
